--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
     "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4",
     "ts-node": "^9.0.0",
@@ -24,7 +26,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "yarn build"
   }
 }
